# eval_cockpit

./: .dev.vars.example  CLAUDE.md  README.md  bun.lockb  package.json  wrangler.jsonc
.claude/: settings.local.json
polyeval/: .gitignore  Makefile
polyeval/aggregator/: Dockerfile  README.md  pyproject.toml
polyeval/aggregator/src/polyeval_aggregator/: __init__.py  main.py  metrics.py  pipeline.py
polyeval/aggregator/src/polyeval_aggregator/attestation/: sign.py
polyeval/aggregator/src/polyeval_aggregator/score/: correctness.py  perf.py  reliability.py
polyeval/aggregator/src/polyeval_aggregator/stats/: bootstrap.py  trim.py
polyeval/aggregator/tests/property/: test_bootstrap.py  test_trim.py
polyeval/aggregator/tests/unit/: test_baseline.py  test_determinism.py  test_scoring.py
polyeval/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
polyeval/api/alembic/: env.py
polyeval/api/alembic/versions/: 0001_init.py  0002_rls_determinism.py
polyeval/api/src/polyeval_api/: __init__.py  main.py  metrics.py  openapi.py  settings.py  telemetry.py
polyeval/api/src/polyeval_api/auth/: __init__.py  hmac.py
polyeval/api/src/polyeval_api/cache/: __init__.py  redis.py
polyeval/api/src/polyeval_api/cli/: verify.py
polyeval/api/src/polyeval_api/db/: __init__.py  session.py
polyeval/api/src/polyeval_api/routes/: baselines.py  health.py  submissions.py
polyeval/api/src/polyeval_api/schemas/: __init__.py  baseline.py  health.py  submission.py
polyeval/api/tests/: test_health.py
polyeval/api/tests/integration/: test_e2e_python.py
polyeval/api/tests/unit/: test_cache_key.py  test_hmac.py
polyeval/docs/: attestation-format.md  determinism.md  sandbox-threat-model.md
polyeval/fly/: README.md  fly.aggregator.toml  fly.api.toml  fly.scheduler.toml
polyeval/infra/: .env.example  docker-compose.yml
polyeval/infra/grafana/dashboards/: .gitkeep  01-overview.json  02-determinism.json  03-cache-health.json  04-runner-health.json  05-cost-proxy.json
polyeval/infra/grafana/provisioning/dashboards/: dashboards.yml
polyeval/infra/grafana/provisioning/datasources/: datasources.yml
polyeval/infra/loki/: loki-config.yaml
polyeval/infra/otel-collector/: config.yaml
polyeval/infra/prometheus/: prometheus.yml
polyeval/infra/tempo/: tempo.yaml
polyeval/runners/base/: Dockerfile  README.md  libpolyeval_seed.c
polyeval/runners/cpp/: Dockerfile  README.md  entrypoint.py  seccomp-cpp.json
polyeval/runners/java/: Dockerfile  README.md  entrypoint.py
polyeval/runners/javascript/: Dockerfile  README.md  entrypoint.js  libpolyeval_seed.c  seccomp-js.json
polyeval/runners/python/: Dockerfile  README.md  entrypoint.py  seccomp-python.json
polyeval/runners/rust/: Dockerfile  README.md  entrypoint.py  libpolyeval_seed.c  seccomp-rust.json
polyeval/scheduler/: Cargo.toml  Dockerfile  README.md
polyeval/scheduler/src/: main.rs
polyeval/scripts/: README.md  chaos.py  load_test.py  seed_demo.py
src/: routeTree.gen.ts  router.tsx  styles.css
src/domain/: schemas.ts  submission.ts
src/infrastructure/api/: README.md  client.ts  errors.ts  generated.ts  sign.ts
src/infrastructure/fns/: config.functions.ts  list.functions.ts  submissions.functions.ts
src/lib/: cn.ts  fmt.ts  useAdaptivePoll.ts
src/routes/: __root.tsx  dashboard.tsx  index.tsx  s.$id.tsx  settings.tsx
src/ui/components/: Shell.tsx  Stat.tsx
src/ui/features/result/: LatencyDistribution.tsx  PerfVsBaseline.tsx  ScoreHeader.tsx  TrialMatrix.tsx  TrialTable.tsx
src/ui/features/settings/: store.ts
src/ui/features/submission/: Cockpit.tsx  CodeEditor.tsx  TestSuiteEditor.tsx  store.ts
