[project]
name = "polyeval-aggregator"
version = "0.1.0"
description = "Reduces raw trial results into correctness, perf_ratio, and bootstrap CI95 (spec §5, §8)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.1.0",
    "cryptography>=44.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "uvicorn[standard]>=0.32.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
polyeval-aggregator = "polyeval_aggregator.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyeval_aggregator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "PL", "RUF"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration: marks tests that require a live stack",
]

[tool.mypy]
python_version = "3.12"
strict = true
