[package]
name = "polyeval-scheduler"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Polyglot eval scheduler — Redis Streams consumer, dispatches trials to language runners (spec §5)."
publish = false

[[bin]]
name = "polyeval-scheduler"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process"] }
tempfile = "3"
axum = "0.7"
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
prometheus = "0.13"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
